# internet_shop_backend

internet_shop_backend-main/: pyproject.toml
