[tool.poetry]
name = "internet-shop-backend-main"
version = "0.1.0"
description = ""
authors = ["Egor"]
license = "MIT"
readme = "README.md"
packages = [{include = "internet_shop_backend_main"}]  

[tool.poetry.dependencies]
python = ">=3.13,<4"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-sqlalchemy = "^3.1.1"
requests-html = "^0.10.0"
python-dotenv = "^1.0.1"
flask-migrate = "^4.1.0"
psycopg2 = "^2.9.10"
lxml = {extras = ["html-clean"], version = "^5.3.1"}
flask-jwt-extended = "^4.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
